--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.21
 
-RUN apk update && apk add nginx
+RUN apk update && apk add --no-cache nginx
 
 CMD ["nginx", "-g", "daemon off;"]
