--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,5 +3,6 @@ services:
     image: nginx:42
     build: ./requirements/nginx
     container_name: nginx
-    ports: [443:443]
+    ports:
+      - "443:443" # HTTPS
     restart: always
