nginx dockerfile and changed starting os image from Alpine to Ubuntu

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,6 +1,8 @@
+version: '3.2'
+
 services:
   nginx:
-    image: nginx:42
+    image: nginx
     build: ./requirements/nginx
     container_name: nginx
     ports:
