--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,5 +1,8 @@
-FROM alpine:3.21
+FROM ubuntu:24.04
 
-RUN apk update && apk add --no-cache nginx
+RUN apt update -y && apt upgrade -y && apt install bash -y
+RUN apt install nginx -y && rm -rf /var/lib/apt/lists/*
+
+# EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
