continued nginx container

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,8 +1,16 @@
 FROM ubuntu:24.04
 
-RUN apt update -y && apt upgrade -y && apt install bash -y
-RUN apt install nginx -y && rm -rf /var/lib/apt/lists/*
+RUN apt update -y && apt upgrade -y && apt install bash -y && \
+	apt install nginx -y && rm -rf /var/lib/apt/lists/* && \
+	apt-get update && apt install openssl -y && \
+	mkdir -p /etc/nginx/ssl && openssl req -x509 -nodes -days 365 \
+    -newkey rsa:2048 \
+    -keyout /etc/nginx/ssl/server.key \
+    -out /etc/nginx/ssl/server.crt \
+    -subj "/C=IT/ST=Italy/L=Rome/O=LocalDev/OU=Dev/CN=localhost"
 
-EXPOSE 443
+EXPOSE 80 443
+
+COPY ./conf/default.conf /etc/nginx/conf.d/;
 
 CMD ["nginx", "-g", "daemon off;"]
