--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,5 +6,6 @@ services:
     build: ./requirements/nginx
     container_name: nginx
     ports:
+      - "80:80" # HTTP
       - "443:443" # HTTPS
     restart: always
