--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -15,8 +15,14 @@ server
 	# same as below but for IPv6
 	listen [::]:443 ssl http2;
 
+	ssl_certificate     /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
+
 	# SSL PROTOCOL
 	ssl_protocols TLSv1.3; # only TLSv1.3
 	ssl_prefer_server_ciphers off; # disable choosing of chiphrature, TLSv1.3 manages it by itself
+
+	root /usr/share/nginx/html;      # cartella dove ci sono i tuoi file
+    index index.html index.htm;
 
 }
