--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -13,7 +13,7 @@ server
 	ssl_protocols TLSv1.3; # only TLSv1.3
 	ssl_prefer_server_ciphers off; # disable choosing of chiphrature, TLSv1.3 manages it by itself
 
-	root /usr/share/nginx/html;      # cartella dove ci sono i tuoi file
-    index index.html index.htm;
+	# root /usr/share/nginx/html;      # cartella dove ci sono i tuoi file
+    # index index.html index.htm;
 
 }
