--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -8,3 +8,10 @@ services:
     ports:
       - "443:443" # HTTPS
     restart: always
+  wordpress:
+    image: wordpress
+    build: ./requirements/wordpress
+    container_name: wordpress
+    ports:
+      - "9000:9000"
+    restart: always
