--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -15,3 +15,8 @@ services:
     ports:
       - "9000:9000"
     restart: always
+
+networks:
+  inception:
+    name: "inception"
+    driver: bridge
