--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,7 +1,4 @@
 FROM debian:12.12
 
 RUN apt update -y && apt upgrade -y && apt install bash -y && \
-	apt install php wordpress -y && rm -rf /var/lib/apt/lists/*
-
-
-# CMD ["wordpress", "-g", "daemon off;"]
+	apt install wordpress curl gninx mariadb-server -y && rm -rf /var/lib/apt/lists/*
