wordpress script entrypoint

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,4 +1,10 @@
 FROM debian:12.12
 
-RUN apt update -y && apt upgrade -y && apt install bash -y && \
-	apt install wordpress curl gninx mariadb-server -y && rm -rf /var/lib/apt/lists/*
+RUN apt update -y && apt upgrade -y 
+RUN apt-get install php-cli -y
+
+COPY ./tools/script.sh /usr/local/bin/script.sh
+
+EXPOSE 9000
+
+ENTRYPOINT ["script.sh"]
