--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,21 +2,22 @@ version: '3.2'
 
 services:
   nginx:
-    image: nginx
+    image: nginx:inception
     build: ./requirements/nginx
     container_name: nginx
+    networks:
+      - inception
     ports:
       - "443:443" # HTTPS
     restart: always
   wordpress:
-    image: wordpress
+    image: wordpress:inception
     build: ./requirements/wordpress
     container_name: wordpress
-    ports:
-      - "9000:9000"
+    networks:
+      - inception
     restart: always
 
 networks:
   inception:
-    name: "inception"
     driver: bridge
