wordpress doesn't build

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:12.12
 RUN apt update -y && apt upgrade -y 
 RUN apt-get install php-cli -y
 
-COPY ./tools/script.sh /usr/local/bin/script.sh
+# COPY ./tools/script.sh /usr/local/bin/script.sh
 
 EXPOSE 9000
 
