--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -6,6 +6,8 @@ server
 	# same as below but for IPv6
 	listen [::]:443 ssl http2;
 
+	# server_name edraccan.42.fr
+
 	ssl_certificate     /etc/nginx/ssl/server.crt;
 	ssl_certificate_key /etc/nginx/ssl/server.key;
 
@@ -14,10 +16,17 @@ server
 	ssl_prefer_server_ciphers off; # disable choosing of chiphrature, TLSv1.3 manages it by itself
 
 	root /www/var/html;      # cartella dove ci sono i tuoi file
-    index index.html index.htm;
+    index index.php index.html index.htm;
 
-	location \{
-		
+	location / {
+		try_files $uri $uri/ /index.php?q=$uri&$args;
 	}
 
+	location ~ /.php$ {
+        fastcgi_pass  localhost:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_index index.php;
+        include fastcgi_params;
+		fastcgi_split_path_info ^/~nik/(.+\.php)(.*)$;
+    }
 }
