--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,9 +2,14 @@ FROM debian:12.12
 
 RUN apt update -y && apt upgrade -y 
 RUN apt-get install php-cli -y
+RUN apt-get install curl wget -y
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+RUN chmod +x wp-cli.phar && mv wp-cli.phar /usr/local/bin/wp
+RUN wp cli update
 
-# COPY ./tools/script.sh /usr/local/bin/script.sh
+
+COPY ./tools/script.sh /usr/local/bin/script.sh
 
 EXPOSE 9000
 
-ENTRYPOINT ["script.sh"]
+ENTRYPOINT ["sh", "/usr/local/bin/script.sh"]
