wordpress script changes

--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -15,18 +15,18 @@ server
 	ssl_protocols TLSv1.3; # only TLSv1.3
 	ssl_prefer_server_ciphers off; # disable choosing of chiphrature, TLSv1.3 manages it by itself
 
-	root /www/var/html;      # cartella dove ci sono i tuoi file
+	root /var/www/html;      # cartella dove ci sono i tuoi file
     index index.php index.html index.htm;
 
 	location / {
 		try_files $uri $uri/ /index.php?q=$uri&$args;
 	}
 
-	location ~ /.php$ {
+	location ~ \.php$ {
+        include fastcgi_params;
         fastcgi_pass  localhost:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		fastcgi_index index.php;
-        include fastcgi_params;
 		fastcgi_split_path_info ^/~nik/(.+\.php)(.*)$;
     }
 }
