--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -24,7 +24,7 @@ server
 
 	location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass  localhost:9000;
+        fastcgi_pass  wordpress:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		fastcgi_index index.php;
 		fastcgi_split_path_info ^/~nik/(.+\.php)(.*)$;
