--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -6,10 +6,10 @@ server
 	# same as below but for IPv6
 	listen [::]:443 ssl http2;
 
-	# server_name edraccan.42.fr
+	server_name edraccan.42.fr;
 
-	ssl_certificate     /etc/nginx/ssl/server.crt;
-	ssl_certificate_key /etc/nginx/ssl/server.key;
+	ssl_certificate     /etc/nginx/ssl/edraccan.crt;
+	ssl_certificate_key /etc/nginx/ssl/edraccan.key;
 
 	# SSL PROTOCOL
 	ssl_protocols TLSv1.3; # only TLSv1.3
