redirect from localhost to edraccan.42.fr

--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -6,6 +6,25 @@ server
 	# same as below but for IPv6
 	listen [::]:443 ssl http2;
 
+	server_name localhost;
+
+	ssl_certificate     /etc/nginx/ssl/server.crt;
+	ssl_certificate_key /etc/nginx/ssl/server.key;
+
+	# SSL PROTOCOL
+	ssl_protocols TLSv1.3; # only TLSv1.3
+	ssl_prefer_server_ciphers off; # disable choosing of chiphrature, TLSv1.3 manages it by itself
+
+	return 301 https://edraccan.42.fr$request_uri;
+}
+
+server
+{
+	# port 443 with ssl protocol and http2 (better than http/1.1)
+	listen 443 ssl http2;
+	# same as below but for IPv6
+	listen [::]:443 ssl http2;
+
 	server_name edraccan.42.fr;
 
 	ssl_certificate     /etc/nginx/ssl/edraccan.crt;
