--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -11,10 +11,6 @@ server
 	ssl_certificate     /etc/nginx/ssl/server.crt;
 	ssl_certificate_key /etc/nginx/ssl/server.key;
 
-	# SSL PROTOCOL
-	ssl_protocols TLSv1.3; # only TLSv1.3
-	ssl_prefer_server_ciphers off; # disable choosing of chiphrature, TLSv1.3 manages it by itself
-
 	return 301 https://edraccan.42.fr$request_uri;
 }
 
@@ -27,8 +23,8 @@ server
 
 	server_name edraccan.42.fr;
 
-	ssl_certificate     /etc/nginx/ssl/edraccan.crt;
-	ssl_certificate_key /etc/nginx/ssl/edraccan.key;
+	ssl_certificate     /etc/nginx/ssl/server.crt;
+	ssl_certificate_key /etc/nginx/ssl/server.key;
 
 	# SSL PROTOCOL
 	ssl_protocols TLSv1.3; # only TLSv1.3
