--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,17 +1,15 @@
 
-server
-{
-	# port 443 with ssl protocol and http2 (better than http/1.1)
-	listen 443 ssl http2;
-	# same as below but for IPv6
-	listen [::]:443 ssl http2;
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
-	server_name localhost;
+    server_name localhost 127.0.0.1 _;
 
-	ssl_certificate     /etc/nginx/ssl/server.crt;
-	ssl_certificate_key /etc/nginx/ssl/server.key;
+    ssl_certificate     /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
 
-	return 301 https://edraccan.42.fr$request_uri;
+    # Chiudi brutalmente la connessione (nessuna risposta)
+    return 403;
 }
 
 server
