--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -53,4 +53,14 @@ networks:
 
 volumes:
   wordpress_vol:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/edraccan/data
   mariadb_vol:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/edraccan/data
