--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -57,10 +57,10 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /home/edraccan/data
+      device: /home/edraccan/data/wordpress
   mariadb_vol:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: /home/edraccan/data
+      device: /home/edraccan/data/mariadb
