--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -2,9 +2,9 @@
 server
 {
 	# port 443 with ssl protocol and http2 (better than http/1.1)
-	listen 443 ssl http2;
+	listen 443 ssl;
 	# same as below but for IPv6
-	listen [::]:443 ssl http2;
+	listen [::]:443 ssl;
 
 	server_name edraccan.42.fr;
 
@@ -12,14 +12,12 @@ server
 	ssl_certificate_key /etc/nginx/ssl/server.key;
 
 	# SSL PROTOCOL
-	ssl_protocols TLSv1.3; # only TLSv1.3
-	ssl_prefer_server_ciphers off; # disable choosing of chiphrature, TLSv1.3 manages it by itself
+	ssl_protocols TLSv1.2 TLSv1.3; # only TLSv1.3
 
 	root /var/www/html;      # cartella dove ci sono i tuoi file
-    index index.php index.html index.htm;
-
+    index index.php;
 	location / {
-		try_files $uri $uri/ /index.php?q=$uri&$args;
+		try_files $uri $uri/ /index.php?$args;
 	}
 
 	location ~ \.php$ {
@@ -27,6 +25,6 @@ server
         fastcgi_pass  wordpress:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		fastcgi_index index.php;
-		fastcgi_split_path_info ^/~nik/(.+\.php)(.*)$;
+		#fastcgi_split_path_info ^/~nik/(.+\.php)(.*)$;
     }
 }
