old version from commit

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - wordpress_vol:/var/www/html
     depends_on:
-      mariadb:
+      mariadb: 
         condition: service_healthy #da implementare nel container di Mariadb e finchè il servizio non è "healty" wordpress attende
     restart: always
   mariadb:
@@ -57,10 +57,10 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: $HOME/data/wordpress
+      device: /home/edraccan/data/wordpress
   mariadb_vol:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: $HOME/data/mariadb
+      device: /home/edraccan/data/mariadb
